Changed image stretching. Fixed slider a bit

--- a/ext/jquery/lofslidernews/css/style6.css
+++ b/ext/jquery/lofslidernews/css/style6.css
@@ -39,13 +39,13 @@
 
 /*******************************************************/
 .lof-main-item-desc{
-	z-index:100px;
 	position:absolute;
 	bottom:0px;
 	left:0px;
 	background:url(../images/bg_trans.png);
 	height:95%;
-	padding:10px;
+	padding:15px;
+  padding-right: 30px;
 }
 .lof-main-item-desc p{
 	margin:0 8px;
@@ -56,6 +56,7 @@
 	padding:0;
 	margin:0;
   padding-right: 50px;
+  margin-bottom: 10px;
 }
 .lof-main-item-desc h2{
 	padding:0;
@@ -87,7 +88,7 @@ ul.lof-main-wapper{
 	position:relative;
 }
 
-ul.lof-main-wapper li{
+ul.lof-main-wapper > li{
 	overflow:hidden;
 	/* padding:0px;
 	margin:0px; */
